WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192716
kVTVideoEncoderSpecification_Usage should not be set if VCP is not enabled
https://bugs.webkit.org/show_bug.cgi?id=192716
Summary
kVTVideoEncoderSpecification_Usage should not be set if VCP is not enabled
youenn fablet
Reported
2018-12-14 13:34:05 PST
kVTVideoEncoderSpecification_Usage should not be set if VCP is not enabled
Attachments
Patch
(2.32 KB, patch)
2018-12-14 13:36 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.80 MB, application/zip)
2018-12-14 15:33 PST
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-12-14 13:36:41 PST
Created
attachment 357337
[details]
Patch
EWS Watchlist
Comment 2
2018-12-14 15:33:47 PST
Comment on
attachment 357337
[details]
Patch
Attachment 357337
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/10402560
New failing tests: webanimations/leak-document-with-web-animation.html
EWS Watchlist
Comment 3
2018-12-14 15:33:59 PST
Created
attachment 357348
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
youenn fablet
Comment 4
2018-12-14 15:40:28 PST
Comment on
attachment 357337
[details]
Patch win error is unrelated
WebKit Commit Bot
Comment 5
2018-12-14 16:06:24 PST
Comment on
attachment 357337
[details]
Patch Clearing flags on attachment: 357337 Committed
r239240
: <
https://trac.webkit.org/changeset/239240
>
WebKit Commit Bot
Comment 6
2018-12-14 16:06:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-12-14 16:07:39 PST
<
rdar://problem/46745341
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug