kVTVideoEncoderSpecification_Usage should not be set if VCP is not enabled https://bugs.webkit.org/show_bug.cgi?id=192716

Reviewed by Eric Carlson.

https://trac.webkit.org/changeset/239220 sets the usage value for all platforms, but we should only enable it for VCP.
* Source/webrtc/sdk/objc/components/video_codec/RTCVideoEncoderH264.mm:
(-[RTCSingleVideoEncoderH264 resetCompressionSessionWithPixelFormat:]):


Canonical link: https://commits.webkit.org/207303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239240 268f45cc-cd09-0410-ab3c-d52691b4dbfc